working uart rx

--- a/core/clk_div/fusesoc.conf
+++ b/core/clk_div/fusesoc.conf
@@ -1,5 +1,5 @@
 [library..]
-location = /home/fear/Documents/GIT/ECE641/core/clk_div
+location = ./core/clk_div
 sync-uri = .
 sync-type = local
 auto-sync = true
